# BD-project

./: Arquitecture.drawio  README.md  apresentacao.txt  estruturaApresentacao.md  notas.md
src/: JournalsWithTheGreatestImpact.sql  MostProductiveAuthorsByTopic.sql  README.md  SQLQuery1.sql  app.py  conf.ini  pyproject.toml  queries.sql
src/persistency/: article.py  author.py  authors.py  chart.py  institution.py  journal.py  session.py  topic.py
src/tables/: README.md  clear_tables.py  create_indexes.sql  create_procedures.py  create_procedures.sql  create_tables.sql  create_triggers.sql  create_udfs.sql  insert_samples.py  lixo_insert_article_info.py  setup_tables.py  tables.py
src/tables/full_data/: download.py  swagger.json  test.py
src/templates/: authors_list.html  index.css  index.html
src/templates/article/: author_details_view.html  authors_list.html
src/templates/articles/: article_details_form.html  article_details_view.html  article_list.html  articles.html  articles_list.html
src/templates/authors/: author_details_form.html  author_details_view.html  authors.html  authors_details_form.html  authors_list.html
src/templates/institutions/: institution_details_form.html  institution_details_view.html  institutions.html  institutions_details_form.html  institutions_fragment.html  institutions_list.html
src/templates/journals/: journal_details_form.html  journal_details_view.html  journals.html  journals_list.html
src/templates/topic/: topic_details_view.html  topics.html
src/templates/topics/: topic_details_form.html  topic_details_view.html  (+2 more)
(+61 files in other folders)
